# task-tracker-cli

./: README.md  config.json  globals.py  pyproject.toml  tasks_database.json  test.py  tests.py  tracker.py  utils.py
tests/: tests.py
tracker/: TrackerCLI.py  config.json  environment.py  model.py  tasks_database.json  tracker.py  utils.py
tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
