[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tracker"
version = "0.1.0"
description = "Simple CLI tool for managing a todo list."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.3.8",
    "rich>=14.0.0",
]

[project.scripts]
tracker = "tracker.tracker:main"
